Adds support for redirects

--- a/tmpl/configs.html
+++ b/tmpl/configs.html
@@ -56,7 +56,14 @@ td[colspan="2"] {
   </tr>
   {{range .Configs}}
     <tr>
-      <td colspan="2">Site: {{.Name}}</td>
+      <td colspan="2">
+        {{if .Redirect}}
+          Redirect:
+        {{else}}
+          Site:
+        {{end}}
+        {{.Name}}
+      </td>
     </tr>
     <tr>
       <td>binding:</td>
@@ -73,6 +80,12 @@ td[colspan="2"] {
       <tr>
         <td>upstream {{$k}}:</td>
         <td>{{$v}}</td>
+      </tr>
+    {{end}}
+    {{if .Redirect}}
+      <tr>
+        <td>redirect</td>
+        <td>{{.Redirect}}</td>
       </tr>
     {{end}}
   {{end}}
