--- a/tmpl/configs.html
+++ b/tmpl/configs.html
@@ -67,7 +67,7 @@ td[colspan="2"] {
     </tr>
     <tr>
       <td>binding:</td>
-      <td>{{.RequestMatcher}}</td>
+      <td>{{.Matcher}}</td>
     </tr>
     <tr>
       <td>upstream:</td>
