Render real error pages

--- a/tmpl/configs.html
+++ b/tmpl/configs.html
@@ -4,7 +4,12 @@
 <style>
 * {
   font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-  color: #333;
+}
+body {
+  display: flex;
+  background-color: rgb(228, 240, 245);
+  align-items: center;
+  color: rgb(50, 50, 50);
 }
 
 table {
@@ -15,10 +20,11 @@ table {
 }
 
 td {
-  padding: 5px;
+  color: rgb(50, 50, 50);
+  padding: 0.5rem 0.2rem;
   vertical-align: top;
-  border-bottom: 1px solid #ccc;
-  font-size: 15px;
+  border-bottom: 0.1rem solid rgb(50, 50, 50);
+  font-size: 1rem;
 }
 
 td:first-child {
@@ -26,10 +32,10 @@ td:first-child {
 }
 
 td[colspan="2"] {
-  padding-top: 20px;
-  border-bottom: 1px solid #666;
+  padding: 2rem 0.2rem 0.2rem;
+  border-bottom: 0.3rem solid rgb(50, 50, 50);
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 </style>
 </head>
