Adds provider that routes traffic based off hash of IP

--- a/tmpl/configs.html
+++ b/tmpl/configs.html
@@ -75,16 +75,15 @@ td[colspan="2"] {
       <td>binding:</td>
       <td>{{.Matcher}}</td>
     </tr>
-    <tr>
-      <td>upstream:</td>
-      <td>{{range .UpstreamProvider.All}}
-          {{.}}<br>
-        {{end}}
-      </td>
-    </tr>
+    {{range $i, $v := .UpstreamProvider.All}}
+      <tr>
+        <td>upstream #{{$i}}:</td>
+        <td>{{$v}}</td>
+      </tr>
+    {{end}}
     {{range $k, $v :=.UpstreamProvider.DebugInfo}}
       <tr>
-        <td>upstream {{$k}}:</td>
+        <td>{{$k}}:</td>
         <td>{{$v}}</td>
       </tr>
     {{end}}
